# labor_regelungstechnik

./: README.rst  pyproject.toml
labor_regelungstechnik/: utils.py
labor_regelungstechnik/experiments/: extract_measurements.py  parameter_optimization.py  simulate_system.py  variational_modelling.py
labor_regelungstechnik/experiments/variational_modeling/debug/: system.m  system.py
labor_regelungstechnik/measurements/: measurements_001.json  messungen_17_11_22.mf4  messungen_18_11_22.mf4
labor_regelungstechnik/systems/: single_pendulum_nonlinear.py
labor_regelungstechnik/templates/: article.tex.j2  equations.tex.j2  math.tex.j2  system.m.j2  system.py.j2
matlab/: SortingController.m  System.m  template.slx
matlab/p_regler/: model.slx  model.slx.autosave
matlab/testing/: README.rst  StateTest.m  test_state_space.slx
tests/: test_templates.py  util.py
